# Nindo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp  player.cpp  player.h  test_object.cpp  test_object.h
resources/shader/: default.frag  default.vert
